active tab working + active section style changed

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ section {
         font-size: 11px;
     }
 }
+
 @media (min-width: 768px) {
     .navbar__menu li a {
         font-size: 14px;
@@ -245,7 +246,9 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.your-active-class {
     background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(155, 144, 144, 0.4) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(
+            0deg, rgba(87, 6, 93, 0.4) 0%, rgba(0, 0, 0, 0) 100%);
+    border-radius: 10px;
 }
 
 section.your-active-class .landing__container::before {
