--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,6 @@ section {
 
 
 /* ---- Module Rules ---- */
-
 /* Navigation Styles*/
 
 
@@ -78,52 +77,34 @@ section {
     padding-left: 0;
     margin: 0;
     text-align: right;
-
 }
 
 .navbar__menu li {
     display: inline-block;
-
 }
-
-.navbar__menu li a {
-    color: black;
-    text-decoration: none;
-    padding: 40px 10px;
-    transition: 0.3s;
-    position: relative;
-    z-index: 2;
-}
-
-
 
 .navbar__menu .menu__link {
-    display: inline-block;
+    display: block;
     padding: 1em;
     font-weight: bold;
     text-decoration: none;
     color: #000;
 }
 
-.navbar__menu .menu__link:hover {
+.navbar__menu .menu__link:hover, .navbar__menu .your-active-tab a {
     background: var(--activeTabColor);
-
     color: #fff;
-    transition: all 0.3s ease;
+    transition: all ease 0.3s;
 }
 
-
-.navbar__menu .your-active-tab {
-    background: var(--activeTabColor);
-
-    color: #fff;
-    transition: all 0.3s ease;
+/*Mobile*/
+@media (max-width: 767px) {
+    .navbar__menu ul li{
+        display: block;
+        text-align: center;
+    }
 }
 
-.navbar__menu .menu__link:hover a, .navbar__menu .your-active-tab a {
-    color: white;
-    font-size: .8em;
-}
 
 /* Header Styles */
 .page__header {
@@ -255,4 +236,28 @@ section.your-active-class .landing__container::after {
     to {
         transform: rotate(360deg) translate(-1em) rotate(-360deg);
     }
+}
+
+
+
+
+
+/*trying something*/
+
+.toggle-menu{
+    color: #c5c3c3;
+    font-size: 22px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+@media (min-width: 768px) {
+    .toggle-menu{
+        display: none;
+    }
+    .navbar__menu ul {
+        display: block;
+    }
+
 }
